<?xml version="1.0"?>
<package format="2">
  <name>robot_info</name>
  <version>0.0.0</version>
  <description>The robot_info package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotinfo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>robotinfo_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>robotinfo_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>

  </export>
</package>
